# Muhandis-Pos

./: .env.Example  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  models.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/apps/: admin.py  apps.py  filter.py  pagination.py  permissions.py  urls.py
backend/apps/management/: magazin_seed.py
backend/apps/management/commands/: convert_product_images.py  link_cashier_sales.py  patch_magazin_activity.py  patch_today_sales.py  seed_bulk_demo.py  seed_demo.py  seed_magazin_ecosystem.py  seed_magazin_products.py  seed_stores.py  (+4 more)
backend/apps/migrations/: 0001_initial.py  0002_product_branch_product_emoji_product_is_draft_and_more.py  0004_poscartdraft.py  0005_suppliercatalogitem_barcode.py  0006_creditaccount_credittransaction.py  0007_creditaccount_allow_duplicate_names.py  0008_product_image.py  0009_product_size_unit.py  0010_refactor_models.py  0011_remove_customer_merge_credit.py  0012_sale_payment_breakdown.py  0013_sale_payment_breakdown.py  0014_product_barcode_per_branch.py
backend/apps/models/: __init__.py  agent.py  base.py  credit.py  inventory.py  product.py  purchase.py  sale.py  supplier.py  users.py
backend/apps/serializers/: auth_serializers.py  fields.py  pos_serializers.py  product_serializers.py
backend/apps/services/: branch_access.py  catalog.py  credit.py  platform_monitor.py  product_image.py  purchase.py  sale.py  stock.py  thermal_print.py
backend/apps/validators/: __init__.py  phone.py
backend/apps/views/: __init__.py  auth_views.py  platform_views.py  pos_views.py  print_views.py  product_views.py
backend/root/: pagination.py  settings.py  urls.py
(+140 files in other folders)
